js262/test/language/statements/class/elements/syntax/early-errors/grammar-privatename-whitespace-error-static-meth.js


/*---
description: No space allowed between sigil and IdentifierName (Static Method) (class declaration)
esid: prod-ClassElement
features: [class-static-methods-private, class]
flags: [generated]
negative:
  phase: parse
  type: SyntaxError
info: |
    Updated Productions

    ClassElementName :
      PropertyName
      PrivateName

    PrivateName ::
      # IdentifierName

---*/


$DONOTEVALUATE();

class C {
  static # m() {}
}
